--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -2,16 +2,18 @@
     "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "generate:ers": "node tools/generate-ers.mjs"
+  },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
-    }
+    "axios": "^1.11.0",
+    "concurrently": "^9.0.1",
+    "laravel-vite-plugin": "^2.0.0",
+    "md-to-pdf": "^5.2.4",
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.0.4"
+  }
 }
