--- a/backend-app/composer.json
+++ b/backend-app/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
-        "darkaonline/l5-swagger": "^9.0",
+        "darkaonline/l5-swagger": "*",
         "doctrine/dbal": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
