--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -113,7 +113,7 @@ jobs:
           PORT="${SSH_PORT:-22}"
           ssh -p "$PORT" "$SSH_USER@$SSH_HOST" "BACKEND_PATH='$BACKEND_PATH' bash -s" << 'EOF'
           set -euo pipefail
-          cd "$BACKEND_PATH"
+          cd "$BACKEND_PATH/backend-app"
           git pull origin main
           php "$HOME/composer.phar" install --no-dev --no-interaction --prefer-dist --optimize-autoloader
           php artisan migrate --force --ansi
