fix: dependencies for build frontend

--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -130,4 +130,6 @@ jobs:
           FRONTEND_DEPLOY_PATH: ${{ secrets.FRONTEND_DEPLOY_PATH }}
         run: |
           PORT="${SSH_PORT:-22}"
+          sudo apt-get update
+          sudo apt-get install -y rsync
           rsync -az --delete -e "ssh -p $PORT" dist/ "$SSH_USER@$SSH_HOST:$FRONTEND_DEPLOY_PATH"
