fix: misc test fixed and added a mini job to copy the .htaccess to the browser file inside frontend production endpoint to work properly

--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -72,6 +72,11 @@ jobs:
       - name: Build frontend
         run: npm run build -- --configuration production
         working-directory: bomberos-app
+        
+      - name: Copy htaccess to browser build
+        run: |
+          mkdir -p "${FRONTEND_BUILD_DIR}/browser"
+          cp bomberos-app/public/.htaccess "${FRONTEND_BUILD_DIR}/browser/.htaccess"
 
       - name: Upload frontend build
         uses: actions/upload-artifact@v4
