--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -79,28 +79,19 @@ jobs:
           name: frontend-dist
           path: ${{ env.FRONTEND_BUILD_DIR }}
       
-      - name: Upload frontend htaccess
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-htaccess
-          path: bomberos-app/public/.htaccess
-
   deploy:
     runs-on: ubuntu-latest
     needs: ci
     if: github.ref == 'refs/heads/main'
     steps:
+      - name: Checkout (deploy)
+        uses: actions/checkout@v4
+
       - name: Download frontend build
         uses: actions/download-artifact@v4
         with:
           name: frontend-dist
           path: dist
-      
-      - name: Download frontend htaccess
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-htaccess
-          path: htaccess
 
       - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.9.0
@@ -145,4 +136,4 @@ jobs:
           ssh -p "$PORT" "$SSH_USER@$SSH_HOST" "rm -rf '$FRONTEND_DEPLOY_PATH' && mkdir -p '$FRONTEND_DEPLOY_PATH'"
           scp -P "$PORT" -r dist/* "$SSH_USER@$SSH_HOST:$FRONTEND_DEPLOY_PATH/"
           ssh -p "$PORT" "$SSH_USER@$SSH_HOST" "mkdir -p '$FRONTEND_DEPLOY_PATH/browser'"
-          scp -P "$PORT" htaccess/.htaccess "$SSH_USER@$SSH_HOST:$FRONTEND_DEPLOY_PATH/browser/.htaccess"
+          scp -P "$PORT" bomberos-app/public/.htaccess "$SSH_USER@$SSH_HOST:$FRONTEND_DEPLOY_PATH/browser/.htaccess"
