--- a/backend-app/.env.example
+++ b/backend-app/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FRONTEND_URL=http://localhost:4200
 
 GOOGLE_CLIENT_ID=
 
@@ -49,14 +50,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=mail.itmanagement.cl
+MAIL_PORT=465
+MAIL_USERNAME=sigba@itmanagement.cl
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="sigba@itmanagement.cl"
+MAIL_FROM_NAME="SIGBA"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
