--- a/backend-app/.env.example
+++ b/backend-app/.env.example
@@ -59,6 +59,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="sigba@itmanagement.cl"
 MAIL_FROM_NAME="SIGBA"
+WEBHOOK_URL=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
